@@ -887,7 +887,7 @@ public class HRegionServer implements HConstants, HRegionInterface, Runnable {
             if(e == null || stopRequested.get()) {
               continue;
             }
-            LOG.info(e.msg);
+            LOG.info("Worker: " + e.msg);
             HRegionInfo info = e.msg.getRegionInfo();
             switch(e.msg.getType()) {
 
@@ -1185,7 +1185,7 @@ public class HRegionServer implements HConstants, HRegionInterface, Runnable {
   }
 
   public RowResult getClosestRowBefore(final byte [] regionName, 
-    final byte [] row)
+    final byte [] row, final byte [] columnFamily)
   throws IOException {
     checkOpen();
     requestCount.incrementAndGet();
@@ -1193,7 +1193,7 @@ public class HRegionServer implements HConstants, HRegionInterface, Runnable {
       // locate the region we're operating on
       HRegion region = getRegion(regionName);
       // ask the region for all the data 
-      RowResult rr = region.getClosestRowBefore(row);
+      RowResult rr = region.getClosestRowBefore(row, columnFamily);
       return rr;
     } catch (IOException e) {
       checkFileSystem();
@@ -1898,8 +1898,8 @@ public class HRegionServer implements HConstants, HRegionInterface, Runnable {
       
       if (cmd.equals("stop")) {
         printUsageAndExit("To shutdown the regionserver run " +
-        		"bin/hbase-daemon.sh stop regionserver or send a kill signal to" +
-        		"the regionserver pid");
+          "bin/hbase-daemon.sh stop regionserver or send a kill signal to" +
+          "the regionserver pid");
       }
       
       // Print out usage if we get to here.
