@@ -116,6 +116,7 @@ Release 0.19.0 - Unreleased
                MR Jobs (Billy Pearson via Stack)
    HBASE-993   Turn of logging of every catalog table row entry on every scan
    HBASE-992   Up the versions kept by catalog tables; currently 1. Make it 10?
+   HBASE-998   Narrow getClosestRowBefore by passing column family
         
   NEW FEATURES
    HBASE-875   Use MurmurHash instead of JenkinsHash [in bloomfilters]
